# Vizme

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  env.template  package-lock.json  package.json  playwright.config.ts
Lib/: vizme.js
backend/: Dockerfile  README.md  index.js  package-lock.json  package.json  vitest.config.js  vitest.integration.config.js
docker/: .env.example  KEYCLOAK_SETUP.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  fix-keycloak-db.sh  init-multiple-databases.sh  tsconfig.json
docs/: 500_ERROR_FIX.md  API.md  API_ARCHITECTURE.md  ARCHITECTURE.md  BACKEND_TESTING.md  CORS_FIX_GUIDE.md  CORS_RESOLUTION.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DEVELOPMENT.md  ENHANCEMENT_SUMMARY.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  ISSUES_RESOLVED.md  METRICS_CALCULATIONS.md  METRICS_TOTAL_REVENUE.md  MIMIR_MULTITENANCY.md  PRODUCTION.md  README.md  Roadmap.md  SETUP.md  SYSTEM_ARCHITECTURE.md  USER_GUIDE.md  VISUALIZATION_AND_GRAFANA.md  authorization-implementation-plan.md  keycloak-architecture-critical-review.md  keycloak-auth-step-1.md  keycloak-auth-step-2.md  keycloak-migration-overview.md  playwright-auth-smoke-testing.md  usingCodeSnippet.md  usingLibrary.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.js  playwright.config.ts  vite.config.js  wrangler.toml
pyLibrary/: README.md  pyproject.toml  smoke_demo.py
pyLibrary/src/vizme/: __init__.py  client.py  exceptions.py  models.py
testpages/: Test.html  index.html  test2.html
(+242 files in other folders)
